--- a/api/bookreview-api-rest/src/main/resources/persistence.properties
+++ b/api/bookreview-api-rest/src/main/resources/persistence.properties
@@ -1,6 +1,6 @@
 # jdbc.X
 jdbc.driverClassName=org.postgresql.Driver
-jdbc.url=jdbc:postgresql://bookReview_bdd:5432/bookreview
+jdbc.url=jdbc:postgresql://devopsulpgcreyesanfer.postgres.database.azure.com:5432/bookreview
 jdbc.user=bookreview
 jdbc.pass=bookreview
 
